--- a/app/src/main/res/layout/fragment_gauge_panel.xml
+++ b/app/src/main/res/layout/fragment_gauge_panel.xml
@@ -20,7 +20,8 @@
             android:numColumns="4"
             android:stretchMode="columnWidth"
             android:verticalSpacing="0dp"
-            android:layout_marginBottom="9dp">
+            android:layout_marginBottom="9dp"
+            android:padding="9dp">
              </GridView>
         </LinearLayout>
     </ScrollView>
