--- a/app/src/main/res/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/fragment_my_info.xml
@@ -92,7 +92,7 @@
                 style="@style/text_0e1214_15"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:text="用户昵称" />
+                android:text="商家编号" />
 
             <TextView
                 android:id="@+id/tv_nick_name"
