--- a/app/src/main/res/layout/fragment_trading_center.xml
+++ b/app/src/main/res/layout/fragment_trading_center.xml
@@ -188,14 +188,87 @@
                     </LinearLayout>
 
                 </LinearLayout>
-                <TextView
-                    style="@style/text_0e1214_12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="3dp"
-                    android:layout_gravity="end"
-                    android:layout_margin="9dp"
-                    android:text="ccf实时价格走势图" />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        style="@style/text_0e1214_12"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_gravity="bottom|end"
+                        android:layout_margin="9dp"
+                        android:text="ccf实时价格走势图" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="开始日期:"/>
+                            <Button
+                                android:id="@+id/btn_choose_start_time"
+                                android:layout_width="64dp"
+                                android:layout_height="24dp"
+                                android:layout_marginLeft="3dp"
+                                android:background="@drawable/selector_button_bg"
+                                android:text="请选择" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="结束日期:"/>
+                            <Button
+                                android:id="@+id/btn_choose_end_time"
+                                android:layout_width="64dp"
+                                android:layout_height="24dp"
+                                android:layout_marginLeft="3dp"
+                                android:background="@drawable/selector_button_bg"
+                                android:text="请选择" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="从"
+                                />
+                            <TextView
+                                android:id="@+id/tv_start_time"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="2018-03-01"
+                                />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="到"
+                                />
+                            <TextView
+                                android:id="@+id/tv_end_time"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="2018-03-09"
+                                />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </FrameLayout>
+
                 <com.github.mikephil.charting.charts.LineChart
                     android:id="@+id/spread_pie_chart"
                     android:layout_width="match_parent"
